<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:fontFamily="monospace"
        android:textSize="33sp"
        android:textColor="#FFFFFF"
        android:text="@string/logo_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_logo_margin_top"
        android:layout_marginBottom="@dimen/activity_logo_margin_bottom"/>

    <TextView
        android:id="@+id/registration_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_heading"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:layout_below="@+id/logo"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_text_hint"
        style="@style/defaultEditTextStyle"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/registration_heading"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        style="@style/defaultEditTextStyle"
        android:inputType="textPassword"
        android:hint="@string/password_text_hint"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/emailEditText"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"/>

    <EditText
        android:id="@+id/cellNumberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/cell_number_hint"
        style="@style/defaultEditTextStyle"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/passwordEditText"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"/>

    <Spinner
        android:id="@+id/simNetworkProvider"
        android:prompt="@string/sim_network_operator_prompt"
        style="@style/defaultSpinnerStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/cellNumberText"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"/>

    <Spinner
        android:id="@+id/noOfPartnerDevicesSpinner"
        android:prompt="@string/no_of_partner_devices_prompt_spnr"
        android:entries="@array/no_of_partner_devices"
        style="@style/defaultSpinnerStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/cellNumberText"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"/>

    <Spinner
        android:id="@+id/countrySpinner"
        android:prompt="@string/country_prompt_spnr"
        style="@style/defaultSpinnerStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/noOfPartnerDevicesSpinner"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"/>


    <Button
        android:id="@+id/continueRegistrationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_button_text"
        style="@style/defaultButtonStyle"
        android:layout_below="@+id/countrySpinner"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"/>



</RelativeLayout>
