<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/initial_setup_logo_tv"
        android:fontFamily="monospace"
        android:textSize="@dimen/activity_logo_text_size"
        android:textColor="@color/colorPrimary"
        android:text="@string/activity_login_initial_setup_logo_name"
        android:layout_marginTop="@dimen/activity_logo_margin_top"
        android:layout_marginBottom="@dimen/activity_login_logo_horizontal_margin_bottom"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/initial_setup_child_RL"
        android:layout_below="@+id/initial_setup_logo_tv"
        android:layout_marginLeft="@dimen/activity_login_vertical_margin"
        android:layout_marginRight="@dimen/activity_login_vertical_margin"
        android:layout_marginBottom="@dimen/activity_login_logo_horizontal_margin_bottom">

        <EditText
            android:layout_width="match_parent"
            android:inputType="numberDecimal"
            android:hint="@string/activity_login_initial_startup_sms_cost_hint"
            style="@style/defaultEditTextStyle"
            android:id="@+id/sms_cost_et"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

        <Spinner
            android:id="@+id/ussdCommandSpr"
            android:entries="@array/array_ussd_commands"
            style="@style/defaultSpinnerStyle"
            android:layout_width="wrap_content"
            android:layout_below="@+id/sms_cost_et"
            android:layout_marginRight="@dimen/activity_logo_initial_setup_margin_right"
            android:layout_marginEnd="@dimen/activity_logo_initial_setup_margin_right"/>

        <EditText
            android:layout_width="wrap_content"
            android:inputType="text"
            android:hint="@string/activity_login_initial_startup_ussd_command_hint"
            style="@style/defaultEditTextStyle"
            android:id="@+id/ussd_command_et"
            android:layout_toRightOf="@id/ussdCommandSpr"
            android:layout_toEndOf="@+id/ussdCommandSpr"
            android:layout_below="@+id/sms_cost_et"
            android:layout_marginRight="@dimen/activity_logo_initial_setup_margin_right"
            android:layout_marginEnd="@dimen/activity_logo_initial_setup_margin_right"/>

        <Button
            android:text="@string/activity_login_initial_startup_add_ussd_cmd_button_text"
            android:layout_width="match_parent"
            style="@style/defaultButtonStyle"
            android:id="@+id/add_ussd_command_btn"
            android:layout_toRightOf="@+id/ussd_command_et"
            android:layout_toEndOf="@+id/ussd_command_et"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_below="@+id/sms_cost_et"/>
    </RelativeLayout>
    <Button
        android:text="@string/activity_login_initial_startup_complete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/defaultButtonStyle"
        android:id="@+id/get_started_btn"
        android:layout_below="@+id/initial_setup_child_RL"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"/>

</RelativeLayout>